--- a/webapp/app/views/admin/records/new.html.erb
+++ b/webapp/app/views/admin/records/new.html.erb
@@ -1,4 +1,4 @@
-p class="navpath">
+<p class="navpath">
 <%= link_to 'Domains', admin_domains_url -%> &raquo; 
 <%= link_to h(@domain.name), admin_domain_url(@domain) -%> &raquo;
 <%= link_to 'new record', new_admin_domain_record_url(@domain.id) -%>
