Make height of pages 100%.

--- a/webapp/app/views/layouts/admin/defaults.html.erb
+++ b/webapp/app/views/layouts/admin/defaults.html.erb
@@ -8,7 +8,7 @@
 		<%= javascript_include_tag :defaults %>
 	</head>
 	<body>
-		<div id="container">
+		<div id="wrapper">
 			<div id="header">
 				<img class="logo" src="/images/logo.png" alt="BindAdmin" />
 				<%= link_to "sign out", sign_out_url, :class => "logout" %>
