--- a/webapp/app/views/admin/mail_servers/new.html.haml
+++ b/webapp/app/views/admin/mail_servers/new.html.haml
@@ -1,7 +1,8 @@
 %p.navpath
   = link_to 'Defaults', admin_default_url(@default)
   \&raquo;
-  \#{link_to 'new mail server', new_admin_default_mail_server_url(@default.id)}
+  = link_to 'new mail server', new_admin_default_mail_server_url(@default.id)
+
 %h1 New mail server
 %p
   Fields labeled in
@@ -10,20 +11,17 @@
 = form_for(:mail_server, :url => admin_default_mail_servers_url(@default.id)) do |f|
   %table.edit
     %tr
-      %th
-        %label.required{:for => "mail_server_name"} Fqdn:
+      %th= f.label :fqdn, "Fqdn:", :class => "required"
       %td= f.text_field :fqdn
-      %td= @mail_server.errors[:fqdn].first
+      %td.error= @mail_server.errors[:fqdn].first
     %tr
-      %th
-        %label.required{:for => "mail_server_pref"} Preference:
+      %th= f.label :pref, "Preference:", :class => "required"
       %td= f.text_field :pref
-      %td= @mail_server.errors[:pref].first
+      %td.error= @mail_server.errors[:pref].first
     %tr
-      %th
-        %label{:for => "mail_server_ttl"} TTL:
+      %th= f.label :ttl, "TTL:"
       %td= f.text_field :ttl
-      %td= @mail_server.errors[:ttl].first
+      %td.error= @mail_server.errors[:ttl].first
     %tr
       %th &nbsp;
-      %td= submit_tag "Save", :class => "button"
+      %td= f.submit "Save", :class => "button"
