--- a/webapp/app/views/owner/domains/show.html.haml
+++ b/webapp/app/views/owner/domains/show.html.haml
@@ -1,13 +1,13 @@
 %p.navpath
   = link_to 'Domains', owner_domains_url
   \&raquo;
-  \#{link_to h(@domain.name), owner_domain_url(@domain)}
+  = link_to h(@domain.name), owner_domain_url(@domain)
+
 %h1 Domain
 %table.show
   %tr
     %th Name
-    %td
-      = h(@domain.name)
+    %td= h(@domain.name)
   %tr
     %th Type
     %td= h @domain.type
@@ -28,7 +28,9 @@
   %tr
     %th Last updated
     %td= h(@domain.updated_at.strftime('%Y-%m-%d %H:%M'))
+
 %hr/
+
 - if @domain.native?
   %table.show
     - counter = 0
@@ -38,8 +40,7 @@
           %th Records
         - else
           %th &nbsp;
-        %td
-          = h(record.name)
+        %td= h(record.name)
         %td
           - if record.ttl
             = h(record.ttl)
@@ -51,15 +52,14 @@
             (#{h(record.pref)})
           - else
             = h(record.type)
-        %td
-          = h(record.content)
+        %td= h(record.content)
         %td
           - if record.locked
             \&nbsp;
           - else
             .edit
               = link_to 'Edit', edit_owner_domain_record_url(@domain.id, record)
-              ,
+              \&nbsp;
               = link_to 'Delete', owner_domain_record_url(@domain.id, record), :method => 'delete'
       - counter += 1
     %tr
@@ -70,7 +70,9 @@
       %td
         .add
           = link_to 'Add a record', new_owner_domain_record_url(@domain.id)
+
 %hr/
+
 %table.show
   - counter = 0
   - for query in @domain.allow_queries
