--- a/webapp/app/views/admin/allow_queries/new.html.haml
+++ b/webapp/app/views/admin/allow_queries/new.html.haml
@@ -1,8 +1,10 @@
 %p.navpath
   = link_to 'Domains', admin_domains_url
   \&raquo;
-  \#{link_to h(@domain.name), admin_domain_url(@domain)} &raquo;
-  \#{link_to 'new allow query', new_admin_domain_allow_query_url(@domain.id)}
+  = link_to h(@domain.name), admin_domain_url(@domain)
+  \&raquo;
+  = link_to 'new allow query', new_admin_domain_allow_query_url(@domain.id)
+
 %h1 New allow query
 %p
   Fields labeled in
@@ -11,18 +13,16 @@
 = form_for(:allow_query, :url => admin_domain_allow_queries_url(@domain.id)) do |f|
   %table.edit
     %tr
-      %th
-        %label.required{:for => "allow_query_name"} Name:
+      %th= f.label :name, "Name:", :class => "required"
       %td= f.text_field :name
-      %td= @allow_query.errors[:name].first
+      %td.error= @allow_query.errors[:name].first
     %tr
-      %th
-        %label.required{:for => "allow_query_clients"} Clients:
+      %th= f.label :clients, "Clients:", :class => "required"
       %td One per line:
     %tr
       %th &nbsp;
       %td= f.text_area :clients
-      %td= @allow_query.errors[:clients].first
+      %td.error= @allow_query.errors[:clients].first
     %tr
       %th &nbsp;
-      %td= submit_tag "Save", :class => "button"
+      %td= f.submit "Save", :class => "button"
