--- a/webapp/app/views/admin/defaults/edit.html.haml
+++ b/webapp/app/views/admin/defaults/edit.html.haml
@@ -1,7 +1,8 @@
 %p.navpath
   = link_to 'Defaults', admin_default_url(@default)
   \&raquo;
-  \#{link_to 'edit', edit_admin_default_url(@default)}
+  = link_to 'edit', edit_admin_default_url(@default)
+
 %h1 Edit defaults
 %p
   Fields labeled in
@@ -10,45 +11,37 @@
 = form_for(:default, :url => admin_default_url(@default), :html => { :method => :put}) do |f|
   %table.edit
     %tr
-      %th
-        %label.required{:for => "default_ttl"} TTL:
+      %th= f.label :ttl, "TTL:", :class => "required"
       %td= f.text_field :ttl
-      %td= @default.errors[:ttl].first
+      %td.error= @default.errors[:ttl].first
     %tr
-      %th
-        %label.required{:for => "default_mname"} Origin:
+      %th= f.label :mname, "Origin:", :class => "required"
       %td= f.text_field :mname
-      %td= @default.errors[:mname].first
+      %td.error= @default.errors[:mname].first
     %tr
-      %th
-        %label.required{:for => "default_rname"} Person:
+      %th= f.label :rname, "Person:", :class => "required"
       %td= f.text_field :rname
-      %td= @default.errors[:rname].first
+      %td.error= @default.errors[:rname].first
     %tr
-      %th
-        %label.required{:for => "default_serial"} Serial:
+      %th= f.label :serial, "Serial:", :class => "required"
       %td= f.text_field :serial
-      %td= @default.errors[:serial].first
+      %td.error= @default.errors[:serial].first
     %tr
-      %th
-        %label.required{:for => "default_refresh"} Refresh:
+      %th= f.label :refresh, "Refresh:", :class => "required"
       %td= f.text_field :refresh
-      %td= @default.errors[:refresh].first
+      %td.error= @default.errors[:refresh].first
     %tr
-      %th
-        %label.required{:for => "default_retry"} Retry:
+      %th= f.label :retry, "Retry:", :class => "required"
       %td= f.text_field :retry
-      %td= @default.errors[:retry].first
+      %td.error= @default.errors[:retry].first
     %tr
-      %th
-        %label.required{:for => "default_expire"} Expire:
+      %th= f.label :expire, "Expire:", :class => "required"
       %td= f.text_field :expire
-      %td= @default.errors[:expire].first
+      %td.error= @default.errors[:expire].first
     %tr
-      %th
-        %label.required{:for => "default_minimum"} Minimum:
+      %th= f.label :minimum, "Minimum:", :class => "required"
       %td= f.text_field :minimum
-      %td= @default.errors[:minimum].first
+      %td.error= @default.errors[:minimum].first
     %tr
       %th &nbsp;
-      %td= submit_tag "Save", :class => "button"
+      %td= f.submit "Save", :class => "button"
