--- a/webapp/app/views/admin/domains/index.html.haml
+++ b/webapp/app/views/admin/domains/index.html.haml
@@ -1,5 +1,6 @@
 %p.navpath
   = link_to 'Domains', admin_domains_url
+
 %h1 Domains
 %table.listing
   %tr
@@ -9,6 +10,21 @@
     %th Created
     %th Last updated
     %th Action
-  = render :partial => 'domains'
+  - for domain in @domains
+    %tr
+      %td.nameColumn
+        = link_to h(domain.name), admin_domain_url(domain)
+      %td.typeColumn
+        = h(domain.type)
+      %td.ownerColumn
+        = h(domain.owner)
+      %td.createdColumn
+        = h(domain.created_at.strftime('%Y-%m-%d %H:%M'))
+      %td.changedColumn
+        = h(domain.updated_at.strftime('%Y-%m-%d %H:%M'))
+      %td.actionsColumn
+        = link_to 'Details', admin_domain_url(domain)
+        \&nbsp;
+        = link_to 'Delete', admin_domain_url(domain), :method => :delete
 .add
   %p= link_to 'New domain', new_admin_domain_url
