--- a/webapp/app/views/admin/domains/new.html.haml
+++ b/webapp/app/views/admin/domains/new.html.haml
@@ -1,32 +1,29 @@
 %p.navpath
   = link_to 'Domains', admin_domains_url
   \&raquo;
-  \#{link_to 'new', new_admin_domain_url}
+  = link_to 'new', new_admin_domain_url
+
 %h1 New domain
 %p
   Fields labeled in
   %b bold
   are required.
-= form_for(:domain, :url => admin_domains_url) do |form|
+= form_for(:domain, :url => admin_domains_url) do |f|
   %table.edit
     %tr
-      %th
-        %label.required{:for => "domain_name"} Name:
-      %td= form.text_field :name
-      %td= @domain.errors[:name].first
+      %th= f.label :name, "Name:", :class => "required"
+      %td= f.text_field :name
+      %td.error= @domain.errors[:name].first
     %tr
-      %th
-        %label.required{:for => "domain_type"} Type:
-      %td= form.select :type, Domain::TYPES
+      %th= f.label :type, "Type:", :class => "required"
+      %td= f.select :type, Domain::TYPES
     %tr
-      %th
-        %label{:for => "domain_master"} Master:
-      %td= form.text_field :master
-      %td= @domain.errors[:master].first
+      %th= f.label :master, "Master:"
+      %td= f.text_field :master
+      %td.error= @domain.errors[:master].first
     %tr
-      %th
-        %label.required{:for => "domain_user_id"} Owner:
-      %td= form.collection_select :user_id, User.sort(:fullname).all, :id, :fullname
+      %th= f.label :user_id, "Owner:", :class => "required"
+      %td= f.collection_select :user_id, User.sort(:fullname).all, :id, :fullname
     %tr
       %th &nbsp;
-      %td= submit_tag "Save", :class => "button"
+      %td= f.submit "Save", :class => "button"
