--- a/webapp/app/views/admin/name_servers/edit.html.haml
+++ b/webapp/app/views/admin/name_servers/edit.html.haml
@@ -1,24 +1,23 @@
 %p.navpath
   = link_to 'Defaults', admin_default_url(@default)
   \&raquo;
-  \#{link_to h(@name_server.fqdn), edit_admin_default_name_server_url(@default.id, @name_server)}
+  = link_to h(@name_server.fqdn), edit_admin_default_name_server_url(@default.id, @name_server)
+
 %h1 Edit name server
 %p
   Fields labeled in
   %b bold
   are required.
-= form_for(:name_server, :url => admin_default_name_server_url(@default.id, @name_server), :html => { :method => :put }) do |form|
+= form_for(:name_server, :url => admin_default_name_server_url(@default.id, @name_server), :html => { :method => :put }) do |f|
   %table.edit
     %tr
-      %th
-        %label.required{:for => "name_server_fqdn"} Fqdn:
-      %td= form.text_field :fqdn
-      %td= @name_server.errors[:fqdn].first
+      %th= f.label :fqdn, "Fqdn:", :class => "required"
+      %td= f.text_field :fqdn
+      %td.error= @name_server.errors[:fqdn].first
     %tr
-      %th
-        %label{:for => "name_server_ttl"} TTL:
-      %td= form.text_field :ttl, :class => 'text'
-      %td= @name_server.errors[:ttl].first
+      %th= f.label :ttl, "TTL:"
+      %td= f.text_field :ttl, :class => 'text'
+      %td.error= @name_server.errors[:ttl].first
     %tr
       %th &nbsp;
-      %td= submit_tag "Save", :class => "button"
+      %td= f.submit "Save", :class => "button"
