--- a/webapp/app/views/admin/name_servers/new.html.haml
+++ b/webapp/app/views/admin/name_servers/new.html.haml
@@ -1,7 +1,8 @@
 %p.navpath
   = link_to 'Defaults', admin_default_url(@default)
   \&raquo;
-  \#{link_to 'new name server', new_admin_default_name_server_url(@default.id)}
+  = link_to 'new name server', new_admin_default_name_server_url(@default.id)
+
 %h1 New name server
 %p
   Fields labeled in
@@ -10,15 +11,13 @@
 = form_for(:name_server, :url => admin_default_name_servers_url(@default.id)) do |f|
   %table.edit
     %tr
-      %th
-        %label.required{:for => "name_server_name"} Fqdn:
+      %th= f.label :fqdn, "Fqdn:", :class => "required"
       %td= f.text_field :fqdn
-      %td= @name_server.errors[:fqdn].first
+      %td.error= @name_server.errors[:fqdn].first
     %tr
-      %th
-        %label{:for => "name_server_ttl"} TTL:
+      %th= f.label :ttl, "TTL:"
       %td= f.text_field :ttl
-      %td= @name_server.errors[:ttl].first
+      %td.error= @name_server.errors[:ttl].first
     %tr
       %th &nbsp;
-      %td= submit_tag "Save", :class => "button"
+      %td= f.submit "Save", :class => "button"
