--- a/webapp/app/views/admin/servers/edit.html.haml
+++ b/webapp/app/views/admin/servers/edit.html.haml
@@ -1,30 +1,29 @@
 %p.navpath
   = link_to 'Servers', admin_servers_url
   \&raquo;
-  \#{link_to h(@server.servername), admin_server_url(@server)} &raquo;
-  \#{link_to 'edit', edit_admin_server_url(@server)}
+  = link_to h(@server.servername), admin_server_url(@server)
+  \&raquo;
+  = link_to 'edit', edit_admin_server_url(@server)
+
 %h1 Edit Server
 %p
   Fields labeled in
   %b bold
   are required.
-= form_for(:server, :url => admin_server_url(@server), :html => { :method => :put }) do |form|
+= form_for(:server, :url => admin_server_url(@server), :html => { :method => :put }) do |f|
   %table.edit
     %tr
-      %th
-        %label.required{:for => "server_servername"} Servername:
-      %td= form.text_field :servername, :disabled => "disabled"
-      %td= @server.errors[:servername].first
+      %th= f.label :servername, "Servername:", :class => "required"
+      %td= f.text_field :servername, :disabled => "disabled"
+      %td.error= @server.errors[:servername].first
     %tr
-      %th
-        %label.required{:for => "server_password"} Password:
-      %td= form.password_field :password
-      %td= @server.errors[:password].first
+      %th= f.label :password, "Password:", :class => "required"
+      %td= f.password_field :password
+      %td.error= @server.errors[:password].first
     %tr
-      %th
-        %label.required{:for => "server_password_confirmation"} Confirm:
-      %td= form.password_field :password_confirmation
-      %td= @server.errors[:password_confirmation].first
+      %th= f.label :password_confirmation, "Confirm:", :class => "required"
+      %td= f.password_field :password_confirmation
+      %td.error= @server.errors[:password_confirmation].first
     %tr
       %th &nbsp;
-      %td= submit_tag "Save", :class => "button"
+      %td= f.submit "Save", :class => "button"
