--- a/webapp/app/views/admin/servers/new.html.haml
+++ b/webapp/app/views/admin/servers/new.html.haml
@@ -1,29 +1,27 @@
 %p.navpath
   = link_to 'Servers', admin_servers_url
   \&raquo;
-  \#{link_to 'new', new_admin_server_url}
+  = link_to 'new', new_admin_server_url
+
 %h1 New server
 %p
   Fields labeled in
   %b bold
   are required.
-= form_for(:server, :url => admin_servers_url) do |form|
+= form_for(:server, :url => admin_servers_url) do |f|
   %table.edit
     %tr
-      %th
-        %label.required{:for => "server_servername"} Servername:
-      %td= form.text_field :servername
-      %td= @server.errors[:servername].first
+      %th= f.label :servername, "Servername:", :class => "required"
+      %td= f.text_field :servername
+      %td.error= @server.errors[:servername].first
     %tr
-      %th
-        %label.required{:for => "server_password"} Password:
-      %td= form.password_field :password
-      %td= @server.errors[:password].first
+      %th= f.label :password, "Password:", :class => "required"
+      %td= f.password_field :password
+      %td.error= @server.errors[:password].first
     %tr
-      %th
-        %label.required{:for => "server_password_confirmation"} Confirm:
-      %td= form.password_field :password_confirmation
-      %td= @server.errors[:password_confirmation].first
+      %th= f.label :password_confirmation, "Confirm:", :class => "required"
+      %td= f.password_field :password_confirmation
+      %td.error= @server.errors[:password_confirmation].first
     %tr
       %th &nbsp;
-      %td= submit_tag "Save", :class => "button"
+      %td= f.submit "Save", :class => "button"
