--- a/webapp/app/views/admin/users/new.html.haml
+++ b/webapp/app/views/admin/users/new.html.haml
@@ -1,39 +1,35 @@
 %p.navpath
   = link_to 'Users', admin_users_url
   \&raquo;
-  \#{link_to 'new', new_admin_user_url}
+  = link_to 'new', new_admin_user_url
+
 %h1 New user
 %p
   Fields labeled in
   %b bold
   are required.
-= form_for(:user, :url => admin_users_url) do |form|
+= form_for(:user, :url => admin_users_url) do |f|
   %table.edit
     %tr
-      %th
-        %label.required{:for => "user_username"} Username:
-      %td= form.text_field :username
-      %td= @user.errors[:username].first
+      %th= f.label :username, "Username:", :class => "required"
+      %td= f.text_field :username
+      %td.error= @user.errors[:username].first
     %tr
-      %th
-        %label.required{:for => "user_fullname"} Fullname:
-      %td= form.text_field :fullname
-      %td= @user.errors[:fullname].first
+      %th= f.label :fullname, "Fullname:", :class => "required"
+      %td= f.text_field :fullname
+      %td.error= @user.errors[:fullname].first
     %tr
-      %th
-        %label.required{:for => "user_role"} Role:
-      %td= form.select :role, User::ROLES
-      %td= @user.errors[:role].first
+      %th= f.label :role, "Role:", :class => "required"
+      %td= f.select :role, User::ROLES
+      %td.error= @user.errors[:role].first
     %tr
-      %th
-        %label.required{:for => "user_password"} Password:
-      %td= form.password_field :password
-      %td= @user.errors[:password].first
+      %th= f.label :password, "Password:", :class => "required"
+      %td= f.password_field :password
+      %td.error= @user.errors[:password].first
     %tr
-      %th
-        %label.required{:for => "user_password_confirmation"} Confirm:
-      %td= form.password_field :password_confirmation
-      %td= @user.errors[:password_confirmation].first
+      %th= f.label :password_confirmation, "Confirm:", :class => "required"
+      %td= f.password_field :password_confirmation
+      %td.error= @user.errors[:password_confirmation].first
     %tr
       %th &nbsp;
-      %td= submit_tag "Save", :class => "button"
+      %td= f.submit "Save", :class => "button"
