--- a/webapp/app/views/admin/users/show.html.haml
+++ b/webapp/app/views/admin/users/show.html.haml
@@ -1,12 +1,13 @@
 %p.navpath
   = link_to 'Users', admin_users_url
   \&raquo;
-  \#{link_to h(@user.fullname), admin_user_url(@user)}
+  = link_to h(@user.fullname), admin_user_url(@user)
+
 %h1 User
 %table.show
   %tr
     %th Fullname
-    %td= h(@user.fullname)
+    %td= h @user.fullname
     %td
       .edit= link_to 'Edit', edit_admin_user_path(@user)
   %tr
