--- a/webapp/app/views/owner/domains/index.html.haml
+++ b/webapp/app/views/owner/domains/index.html.haml
@@ -1,5 +1,6 @@
 %p.navpath
   = link_to 'Domains', owner_domains_url
+
 %h1 Domains
 %table.listing
   %tr
@@ -9,4 +10,17 @@
     %th Created
     %th Last updated
     %th Action
-  = render :partial => 'domains'
+  - for domain in @domains
+    %tr
+      %td
+        = link_to h(domain.name), owner_domain_url(domain)
+      %td
+        = h(domain.type)
+      %td
+        = h(domain.owner)
+      %td
+        = h(domain.created_at.strftime('%Y-%m-%d %H:%M'))
+      %td
+        = h(domain.updated_at.strftime('%Y-%m-%d %H:%M'))
+      %td
+        = link_to 'Details', owner_domain_url(domain)
