--- a/webapp/app/views/owner/records/edit.html.haml
+++ b/webapp/app/views/owner/records/edit.html.haml
@@ -1,40 +1,37 @@
 %p.navpath
   = link_to 'Domains', owner_domains_url
   \&raquo;
-  \#{link_to h(@domain.name), owner_domain_url(@domain)} &raquo;
-  \#{link_to h(@record.fqdn_name), edit_owner_domain_record_url(@domain.id, @record)}
+  = link_to h(@domain.name), owner_domain_url(@domain)
+  \&raquo;
+  = link_to h(@record.fqdn_name), edit_owner_domain_record_url(@domain.id, @record)
+
 %h1 Edit record
 %p
   Fields labeled in
   %b bold
   are required.
-= form_for(:record, :url => owner_domain_record_url(@domain.id, @record), :html => { :method => :put }) do |form|
+= form_for(:record, :url => owner_domain_record_url(@domain.id, @record), :html => { :method => :put }) do |f|
   %table.edit
     %tr
-      %th
-        %label.required{:for => "record_name"} Name:
-      %td= form.text_field :name
-      %td= @record.errors[:name].first
+      %th= f.label :name, "Name:", :class => "required"
+      %td= f.text_field :name
+      %td.error= @record.errors[:name].first
     %tr
-      %th
-        %label{:for => "record_ttl"} TTL:
-      %td= form.text_field :ttl
-      %td= @record.errors[:ttl].first
+      %th= f.label :ttl, "TTL:"
+      %td= f.text_field :ttl
+      %td.error= @record.errors[:ttl].first
     %tr
-      %th
-        %label.required{:for => "record_type"} Type:
-      %td= form.select :type, Record::OWNER_TYPES
-      %td= @record.errors[:type].first
+      %th= f.label :type, "Type:", :class => "required"
+      %td= f.select :type, Record::OWNER_TYPES
+      %td.error= @record.errors[:type].first
     %tr
-      %th
-        %label{:for => "record_pref"} Preference:
-      %td= form.text_field :pref
-      %td= @record.errors[:pref].first
+      %th= f.label :pref, "Preference:"
+      %td= f.text_field :pref
+      %td.error= @record.errors[:pref].first
     %tr
-      %th
-        %label.required{:for => "record_content"} Content:
-      %td= form.text_field :content
-      %td= @record.errors[:content].first
+      %th= f.label :content, "Content:", :class => "required"
+      %td= f.text_field :content
+      %td.error= @record.errors[:content].first
     %tr
       %th &nbsp;
-      %td= submit_tag "Save", :class => "button"
+      %td= f.submit "Save", :class => "button"
