Replace MongoDB with SQL database (sqlite).

--- a/webapp/app/views/admin/domains/index.html.haml
+++ b/webapp/app/views/admin/domains/index.html.haml
@@ -15,7 +15,7 @@
       %td.nameColumn
         = link_to h(domain.name), admin_domain_url(domain)
       %td.typeColumn
-        = h(domain.type)
+        = h(domain.domtype)
       %td.ownerColumn
         = h(domain.owner)
       %td.createdColumn
