--- a/webapp/app/views/owner/domains/index.html.haml
+++ b/webapp/app/views/owner/domains/index.html.haml
@@ -15,7 +15,7 @@
       %td
         = link_to h(domain.name), owner_domain_url(domain)
       %td
-        = h(domain.type)
+        = h(domain.domtype)
       %td
         = h(domain.owner)
       %td
