--- a/webapp/app/views/admin/records/edit.html.haml
+++ b/webapp/app/views/admin/records/edit.html.haml
@@ -21,8 +21,8 @@
       %td= f.text_field :ttl, :class => 'text'
       %td.error= @record.errors[:ttl].first
     %tr
-      %th= f.label :type, "Type:", :class => "required"
-      %td= f.select :type, Record::TYPES
+      %th= f.label :rectype, "Type:", :class => "required"
+      %td= f.select :rectype, Record::TYPES
     %tr
       %th= f.label :pref, "Preference:"
       %td= f.text_field :pref, :class => 'text'
