--- a/webapp/app/views/admin/domains/show.html.haml
+++ b/webapp/app/views/admin/domains/show.html.haml
@@ -46,7 +46,7 @@
             \&nbsp;
         %td
           - if record.mx?
-            = h(record.domtype)
+            = h(record.rectype)
             (#{h(record.pref)})
           - else
             = h(record.rectype)
